fix: adjust navbar spacing and avatar size

--- a/frappe/desk/page/desktop/desktop.css
+++ b/frappe/desk/page/desktop/desktop.css
@@ -22,6 +22,7 @@
 .navbar-container{
     display: flex;
     align-items: center;
+    gap: 10px;
     justify-content: space-between;
     width: 100%;
     padding: 10px 20px 10px 20px;
@@ -41,11 +42,15 @@
     color: var(--text-light);
 }
 
-.desktop-navbar-modal-search{
+.desktop-navbar-modal-search {
     background-color: var(--control-bg);
     border-radius: var(--border-radius-sm);
-    padding: 6px 10px;
+    height: 32px;
+    padding: 0px 10px;
+    display: flex;
+    align-items: center;
     width: 100%;
+    margin-right: 0px;
 }
 #brand-logo{
     width: auto;
