--- a/frappe/public/scss/desk/avatar.scss
+++ b/frappe/public/scss/desk/avatar.scss
@@ -94,13 +94,13 @@
 	text-align: center;
 
 	.standard-image {
-		font-size: var(--text-xs);
+		@include get_textstyle("xs", "regular");
 	}
 }
 
 .avatar-medium {
-	width: 32px;
-	height: 32px;
+	width: 28px;
+	height: 28px;
 	.standard-image {
 		@include get_textstyle("base", "regular");
 	}
